<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Scavenger Hunt</string>
    <string name="title_activity_login">Scavenger Hunt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">h7oOnFdKOMhFsQUU4RJpOG9c8R1xNsPbCJYQmFcN</string>
    <string name="parse_client_id">6ihlAKU2WhYEWonFzDcnPbRYAK8HqCSy4lzEwXg9</string>


    <!-- Generic -->
    <string name="label_cancel">Cancel</string>
    <string name="label_continue">Continue</string>


    <!-- Menu Options -->
    <string name="option_menu_about">About</string>
    <string name="option_menu_prefs">Preferences</string>
    <string name="option_menu_refresh">Refresh</string>
    <string name="option_menu_logout">LOG OUT</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>


    <!-- Registration Screen -->
    <string name="label_enterUsernamePasswordEmail">Enter your registration info:</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your EMAIL</string>

    <string name="label_login_in_progress">Login in progress...</string>
    <string name="label_signup_in_progress">Sign up in progress for new user</string>
    <string name="label_login_please_wait">Please wait...</string>
    <string name="label_query_in_progress">Searching for user</string>
    <string name="label_queryErrorMessage">User query error.</string>
    <string name="label_signupErrorMessage">User signup error.</string>
    <string name="label_loginErrorMessage">Login error:  </string>
    <string name="label_loginPleaseTryAgainMessage">Please try again</string>
    <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
    <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string>
    <string name="label_selectOption">Select an option:</string>
    <string name="label_gamesiamplaying">View Games I am Playing</string>
    <string name="label_joingame">Join a Game</string>
    <string name="title_activity_main_menu">Menu</string>
    <string name="title_activity_registration">Register</string>

    <!-- Main Menu Screen -->
    <string name="label_newgame">Create Game</string>
    <string name="label_mygames">Play Games</string>
    <string name="label_myinvites">View Invites</string>

    <!-- Login Screen -->
    <string name="label_enterUsernamePassword">Enter your login info:</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="title_activity_create_game">Create Game</string>

    <!-- Create Game Screen -->
    <string name="hint_gameName">Enter a name for your game</string>
    <string name="hint_startTime">Enter a start time for your game</string>
    <string name="hint_endTime">Enter a end time for your game</string>
    <string name="pick_startDate">Start time</string>
    <string name="pick_endDate">End time</string>
    <string name="label_createGameErrorMessage">Error creating game.</string>



    <!-- Add Items Screen -->
    <string name="hint_itemName">Type item name</string>
    <string name="title_activity_add_items">Add Items</string>
    <string name="label_addItemErrorMessage">Error adding item.</string>

    <!-- Add Players Screen -->
    <string name="hint_playerName">Type player name</string>
    <string name="title_activity_add_players">Add Players</string>
    <string name="label_addPlayerErrorMessage">Error adding player.</string>

    <!-- Games Screen -->
    <string name="title_activity_games">Play Games</string>
    <string name="label_game">Click to play:</string>


    <!-- Player List Screen -->
    <string name="title_activity_player_list">Add Players</string>
    <string name="label_invitePlayer">Click to invite:</string>

    <!-- Game Detail Screen -->
    <string name="title_activity_game_detail">Game Detail</string>
    <string name="label_gameDetails">Click an item to submit a picture:</string>
    <string name="label_leaderboard">View Leaderboard</string>


    <!-- Test Screen -->
    <string name="title_activity_test">TestActivity</string>

    <!-- Invites Screen -->
    <string name="title_activity_invites">View Invites</string>
    <string name="label_invite">Click to respond:</string>

    <!-- Invite Response Screen -->
    <string name="title_activity_invite_response">Invite Response</string>
    <string name="label_respond">Select a response:</string>
    <string name="label_acceptInvite">Accept</string>
    <string name="label_declineInvite">Decline</string>

    <!-- Leaderboard Screen -->
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="label_player"><u>Player</u></string>
    <string name="label_found"><u>Items Found</u></string>

    <!-- Found Items Screen -->
    <string name="title_activity_found_items">Found Items</string>
    <string name="label_item"><u>Item</u></string>
    <string name="label_timeFound"><u>Time Found</u></string>

    <!-- Item Picture Screen -->
    <string name="title_activity_item_picture">Item Picture</string>




</resources>
