<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_respond"
        android:textSize="16.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/inviteResponseButton_accept"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/label_acceptInvite"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/inviteResponseButton_decline"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/label_declineInvite"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>