<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activity.CreateGameActivity" >

    <EditText
        android:id="@+id/textbox_gameName"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_gameName"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_pick_startDate"
        android:text="@string/pick_startDate"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/button_pick_endDate"
        android:text="@string/pick_endDate"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginBottom="10dp" />


</LinearLayout>